--- a/videos.html
+++ b/videos.html
@@ -105,31 +105,31 @@
         <div class="video-container">
             <!-- Video 1 -->
             <div class="video-item">
-                <div class="video-title">Video Title</div> <!-- Title for Video 1 -->
+                <div class="video-title">cards of pain rld</div> <!-- Title for Video 1 -->
                 <video controls class="video-player">
                     <source src="https://trailerscdn1.mood-universe.com/trailers/ep/coprldamirah.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="video-item">
-                <div class="video-title">Video Title</div> <!-- Title for Video 1 -->
+                <div class="video-title">cards of pain 8</div> <!-- Title for Video 1 -->
                 <video controls class="video-player">
                     <source src="https://trailerscdn1.mood-universe.com/trailers/ep/cop8.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="video-item">
-                <div class="video-title">Video Title</div> <!-- Title for Video 1 -->
+                <div class="video-title">Bondage</div> <!-- Title for Video 1 -->
                 <video controls class="video-player">
                     <source src="https://cdnp.kink.com/imagedb/106306/trailer/106306_trailer_high.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="video-item">
-                <div class="video-title">Video Title</div> <!-- Title for Video 1 -->
+                <div class="video-title">graias Torture</div> <!-- Title for Video 1 -->
                 <video controls class="video-player">
                     <source src="https://www.graias.com/imgs/movies/movie_217/trailer.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="video-item">
-                <div class="video-title">Video Title</div> <!-- Title for Video 1 -->
+                <div class="video-title">Graias torture 2</div> <!-- Title for Video 1 -->
                 <video controls class="video-player">
                     <source src="https://www.graias.com/imgs/movies/movie_372/trailer.mp4" type="video/mp4">
                 </video>
@@ -137,7 +137,7 @@
 
             
             <div class="video-item">
-                <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
+                <div class="video-title">Dominating Porn</div> <!-- Title for Video 2 -->
                 <video controls class="video-player">
                     <source src="https://cdnp.kink.com/imagedb/103103/trailer/103103_trailer_high.mp4" type="video/mp4">
                 </video>
@@ -146,7 +146,7 @@
             <div class="video-item">
                 <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
                 <video controls class="video-player">
-                    <source src="videos/collection/6.mp4" type="video/mp4">
+                    <source src="https://max.porn/get_file/13/4c6b28bb82625fc4473dcfe6dcc70ec5/485000/485104/485104_720p.mp4" type="video/mp4">
                 </video>
             </div>
 
