--- a/photo/categories.html
+++ b/photo/categories.html
@@ -102,6 +102,13 @@
         <h2>Photo Categories</h2>
         <div class="category-container">
             <!-- Category 1 -->
+            <a href="collection/indian.html">
+                <div class="category-item">
+                    <img src="https://i.pinimg.com/736x/8f/1f/42/8f1f422a2b36819ed8f788a23637d112.jpg" alt="bollywood">
+                    <div class="category-title">Indian</div>
+                </div>
+            </a>
+
             <a href="">
                 <div class="category-item">
                     <img src="https://i.pinimg.com/564x/f7/7d/b9/f77db954be5549f36f5a2ca0e8ca07df.jpg" alt="bollywood">
@@ -118,7 +125,7 @@
             </a>
 
             <!-- Category 3 -->
-            <a href="">
+            <a href="hotrandom.html">
                 <div class="category-item">
                     <img src="https://i.pinimg.com/enabled_hi/564x/1f/86/53/1f86534ee40c8ecb385d05aebce85e7e.jpg" alt="Cities">
                     <div class="category-title">Hot Random</div>
@@ -126,7 +133,7 @@
             </a>
 
             <!-- Category 4 -->
-            <a href="">
+            <a href="romantic.html">
                 <div class="category-item">
                     <img src="https://cdni.pornpics.com/1280/7/736/24331445/24331445_001_fffa.jpg" alt="People">
                     <div class="category-title">Romantic</div>
