--- a/index.html
+++ b/index.html
@@ -159,17 +159,22 @@
 
         <a href="stories.html" class="container center">
             <img src="https://i.pinimg.com/564x/52/73/7f/52737f58753eb965aec9a8b2f7f21615.jpg" alt="Stories">
-            <div class="text">Stories</div>
+            <div class="text">STORIES</div>
         </a>
 
         <a href="videos.html" class="container right">
             <img src="https://i.pinimg.com/736x/77/00/a0/7700a0f3b4f128661df93b4e0272ebdd.jpg" alt="Videos">
-            <div class="text">Videos</div>
+            <div class="text">VIDEOS</div>
         </a>
 
         <a href="photos.html" class="container left">
             <img src="https://i.pinimg.com/736x/db/09/e9/db09e940cb8e3132b30f16fd11e5dcd5.jpg" alt="Photos">
-            <div class="text">Photos</div>
+            <div class="text">PHOTOS</div>
+        </a>
+
+        <a href="comic.html" class="container left">
+            <img src="https://i.pinimg.com/736x/db/09/e9/db09e940cb8e3132b30f16fd11e5dcd5.jpg" alt="Photos">
+            <div class="text">COMICS</div>
         </a>
     </div>
 
