--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </a>
 
         <a href="comic.html" class="container left">
-            <img src="https://i.pinimg.com/736x/db/09/e9/db09e940cb8e3132b30f16fd11e5dcd5.jpg" alt="Photos">
+            <img src="https://8muses.io/img/data/full_000000347577.jpg" alt="Photos">
             <div class="text">COMICS</div>
         </a>
     </div>
