--- a/stories.html
+++ b/stories.html
@@ -338,10 +338,10 @@
             </div>
         </a>
         
-        <a href="story/collection/">
+        <a href="story/collection/abbas.html">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <img src="https://i.pinimg.com/736x/f5/69/f4/f569f4b11b049e8216e7dca32792fcd7.jpg" alt="Adventure Stories">
+                <div class="stories-title">Ab bass</div>
             </div>
         </a>
 
