--- a/stories.html
+++ b/stories.html
@@ -345,6 +345,13 @@
             </div>
         </a>
 
+        <a href="story/collection/sarita.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/27/1c/0f/271c0f17f63ea804318d35f443ae8998.jpg" alt="Adventure Stories">
+                <div class="stories-title">Sarita ki journey</div>
+            </div>
+        </a>
+
         <a href="story/collection/">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
