--- a/story/collection/abbas2.html
+++ b/story/collection/abbas2.html
@@ -41,6 +41,7 @@
 		Update 9<br />
 <br />
 <br />
+<img src="https://i.pinimg.com/736x/07/ad/e3/07ade36e12024dbff02a2a5b149ae5dd.jpg" alt="">
 <br />
 aslam- nahin memsaheb.....jab naseeb ne mujhe thokar maar di hain to ismein kisi aur ka kya dosh.........bus jee raha hoon main us din se.......aab to meri zindagi bhi ek bojh bankar bus reh gayi hain................................................<br />
 <br />
@@ -68,6 +69,7 @@ nidhi- aacha theek hain......main tumse vaada karti hoon ki main tumhari baateio
 <br />
 aslam ke chehrey par fir se wahin gandi hansi tair jati hain.....wo jo chahta tha kuch waisa hi ho raha tha.......nidhi aab puri tarah se aslam ki baateion mein aati jaa rahi thi.......<br />
 <br />
+<img src="https://i.pinimg.com/736x/f9/76/34/f976346dafe44ddfae1bc2bf01e8ad12.jpg" alt="">
 aslam- wo memsaheb ....jis din meri biwi mere ghar par aayi us din main bahut khus tha........socha tha ki mujhe jeenay ki ek wajah mil gayi........magar meri sari khushiyon par jald hi paani fir gaya.........us raat humari suhaag raat thi........main uske paas gaya to wo sharam se apna chehra chupaye hui thi.........mere dil mein bhi wahin armaan they jo suhaagraat mein har mard aur aurat ke beech hote hain........maine dheere se uska ghunghat hataya aur usey apni bahon mein bhar liya........<br />
 <br />
 idher aslam ki baateion se nidhi ka chehra sharam se laal padta jaa raha tha........wo aachey se janti thi ki suhaagraat mein pati patni ke beech kya hota hain........magar aab to nidhi usey mana bhi nahin kar sakti thi usney aslam se vaada jo kiya hua tha.......aur aslam ne kal aane se pehle uske samney yehi shart bhi rakhi thi.......aab nidhi ko aisa lagne laga tha ki usney aslam ko is bare mein chooth dekar bahut badi bhool ki hain.......magar aab uske chahney ya naa chahney se bhi kuch nahin ho sakta tha.......aab dekhna ye tha ki aslam us wakya ko kaise uske samney pesh karta hain......<br />
@@ -93,6 +95,7 @@ nidhi- thehro aslam.......tum mujhe galat samajh rahein ho.......mere kehney ka 
 <br />
 Aslam ka chehra gussey se dahek utatha hain- bus kijiye memsaheb..........hum garib zaroor hain magar apni jubaan ke kachey nahin hain.......apni jaan de dengey magar apni jubaan se peechay nahin hatengey........main aab jaa raha hoon aur aaj ke baad main kabhi yahan mudkar bhi wapas nahin aawunga.......Aslam itna kehkar apne kadam aagey badhata hain tabhi Nidhi jhat se aakar uske samney khadi ho jati hain.........<br />
 <br />
+<img src="https://i.pinimg.com/736x/d8/4d/02/d84d024d3a6913fe79e276a1fa36c38e.jpg" alt="">
 Nidhi- ruk jawo Aslam..........tum is tarah se nahin jaa sakte.......jo tum chahte ho wahi hoga........jo tumhara dil kare wo tum mujhse baatein karo.....magar please aise mutt jawo........main aab tumhein kisi baat ke liye nahin rokungi........<br />
 <br />
 Aslam- band karo apne ye jhoote vaadon ka silsila memsaheb .......ye baat to kal bhi aapne mujhse kahi thi.......ye sab kehney ki baatein hain.........main aachey se janta hoon aap jaise ameer logon ko........koi hum jaise gareeb ki kadra nahin karta........fir aapko kyon humari parwaah hone lagi..........itna kehkar Aslam fir se aagey badhta hain tabhi Nidhi jhat se Aslam ka haath pakad leti hain.........<br />
@@ -113,6 +116,7 @@ Aslam kuch deer tak khamosh rehta hain fir wo apni baatein dubara kehna shuru ka
 <br />
 Aslam- jane do memsaheb.......aagey main apni baat nahin batunga........Nidhi ke chehrey par sawal aab aur bhi gehrey ho chukey they.......wo Aslam ko bilkul bhi nahin samajh paa rahi thi ki wo aakhir chahta kya hain.....pehle jab wo uski baat sunana nahin chahti thi to wo apni baat batane ke liye zidd par ada hua tha.......magar jab wo uski baat sunana chahti hain to wo aab kehna hi nahin chahta........Nidhi aaj ajeeb si duvidha mein fansi hui thi.........usey samaj mein nahin aa raha tha ki usey Aslam ki baateion ka kya jawab dena chahiye.......<br />
 <br />
+<img src="https://i.pinimg.com/736x/2c/75/e3/2c75e3609e9670e20c1f87e41e6b1e12.jpg" alt="">
 Aslam- main apni suhaagraat ke kissey fir kabhi aapko batunga memsaheb........magar ek sawal jo mere munn mein hain wo mujhe bahut pareshan kar raha hain....... agar aap mujhe uska jawab de dengi to ho sakta hain main aapki samasya ka samadhaan kar sakun......<br />
 <br />
 Nidhia ke chehrey par sawaliyan nishan fir se gehrey ho chuke they.........wo kabhi Aslam ke chehrey ki taraf dekh rahi thi to kabhi kamrey ke char deewari ki taraf......<br />
@@ -145,6 +149,7 @@ aur idher aap hain aapke choot mein aag lagi rehti hain to saheb aapki chudai na
 <br />
 Nidhi ki aankhein hairat se puri tarah fail gayi thi........usney apni zindagi mein aisi gandi baatein kabhi kisi ke mooh se nahin suni thi........wo Aslam ki baateion se sharam se pani pani si ho rahi thi.........chaah kar bhi wo Aslam se apni nazrein nahin mila paa rahi thi.........magar wahin dusari taraf uski choot aab aur bhi gili hoti jaa rahi thi........usey khud par hairani ho rahi thi ki uske saath aisa kyon ho raha hain......kya aab usey Aslam ki ye sari baatein aachi lagne rahi thi..........<br />
 <br />
+<img src="https://i.pinimg.com/564x/75/ce/46/75ce46f76b98fd79487ecb61a59911fe.jpg" alt="">
 Aslam- aapne meri baateion ka jawab nahin diya memsaheb.........maine sach kaha naa........<br />
 <br />
 Nidhi ka dil is waqt bahut zoron se dhadak raha tha.......wo chaah rahi thi ki wo wahan se kahin door bhag jaye magar wo aaj apni marzi se kahin jaa bhi nahin sakti thi..........aabhi to Aslam ki gandi baateion ka silsila shuru hi hua tha pata nahin aagey ye jakar kahan par khatam hone wala tha.................................................
@@ -222,6 +227,7 @@ aslam- bilkul lena dena hain memsaheb.......main is waqt apne charpayi par leta 
 <br />
 nidhi ke hosh fir se udd chukey they.......usey samajh mein nahin aa raha tha ki wo aslam ki baateion ka kya jawab dein.......<br />
 <br />
+<img src="https://i.pinimg.com/564x/14/ce/8e/14ce8ef20c0010d4b102b39a39c70d02.jpg" alt="">
 aslam- aap mujhe bahut aachi lagti hain memsaheb.......sach to ye hain ki mera lauda aapki yaad mein bekabu ho gaya hain.......main is waqt aapke haseen badan ko yaad karke mutth maar raha hoon.......aap bahut lajawaab cheez hain memsaheb........kasam se agar aap is waqt mere kareeb hoti to main apna ye lauda poora aapki choot mein utar chuka hota.......aapke dono doodh kitne tight aur naram hain.........jee karta hain ki apne in kathor haathon se unhein bus masalta hi rahun.......aapki gand bhi puri qayamat hain buddhon ke lund mein bhi jaan aa jaye aapka roop dekhkar...........aur jab aap saadi mein hoti hain to bus poochon mutt.......bilkul rapchik maal lagti hain kisi heroine ke maafik........<br />
 <br />
 nidhi ke mooh se bol bilkul bhi nahin foot rahein they........wo aslam ki baateion se ek baar fir se bechain ho gayi thi.......wo to uski tariff kar raha tha magar usi gande style mein.........magar idher aslam ki baateion se nidhi ki choot ek baar fir se gili hoti jaa rahi thi.........<br />
@@ -270,6 +276,7 @@ aslam- aapka bahut bahut shukriya memsaheb.........aap sach mein bahut aachi hai
 <br />
 aaj asalm ke chehrey par vijayi muskaan thi.......nidhi aab puri tarah se uske kaabu mein aa chuki thi.........aab wo apne dil ki sari fantasies ko ek ek kar poora karna chahta tha.........<br />
 <br />
+<img src="https://i.pinimg.com/564x/8d/05/7a/8d057a1b79459b3b0b1181f5757a8d5a.jpg" alt="">
 aslam- chidiya jaal mein aab fans chuki hain.......aur fansti bhi kyon na.......wo to khud bechain hain lund apni choot mein lene ke liye.........uska pati sala paisa kamane ke chaakar mein din raat laga rehta hain..... chutiya hain sala........agar meri biwi aisi maal hoti to sali ke choot aur gand mein din raat apna ye lauda pele rehta......sali ko ek minute ke liye bhi kahin door nahin jane deta........khair tab nahin to aab sahi.........magar jo bhi hain bahut garam maal hain sali.........main daave se kehta hoon ki ye mujhe poora poora maza degi.........is sali ke ander wo sab gun hain jiski mujhe talash thi........<br />
 <br />
 tu dekhti jaa meri jaan tere ander ki sari sharam main kaise dheere dheere ek ek kar bahar lata hoon........tu mere rang mein bahut jald puri tarah se rangegi........tujhe to main apni personal raand banakar rakhunga..........ye sab khyaal aate hi aslam apne haathon ki raftaar dheere dheere apne lund par badhaney lagta hain aur kuch hi minute mein uska lund ek baar fir se pani chor deta hain......wo wahin siskatey hue apne charpayi par bilkul thanda padh jata hain...........<br />
@@ -302,6 +309,7 @@ waqt guzara aur shaam se raat hui........nidhi bhi aane wale kal ko soch sochkar
 <br />
 jaise taise subeh hui aur nidhi ke jehan mein sabse pehle aslam ki yaad aate hi uske chehrey par fir se wahin chamak aa gayi jo kal uske chehrey par thi.......wo na chahtey hue bhi muskura padi......idher sagar taiyaar hokar apne kaam par nikal gaya.......sagar ke jane ke turant baad nidhi fauran apne kamrey mein gayi aur almari mein se ek safed shirt aur brown skirt nikalney lagi......saath mein ek tie bhi tha........wo fir bathroom mein gayi aur fir fresh hone lagi........usney razor se apne choot ke bal aachey se saaf kiye aur poorey jism ko sabun se mal mal kar aachey se dhone lagi.......<br />
 <br />
+<img src="https://i.pinimg.com/564x/ed/dc/08/eddc08b6415c2f1e45eb22da276d6deb.jpg" alt="">
 kareeb 1/2 ghante fresh hone ke baad wo bathroom se bahar aayi fir wo apne bedroom ki ore chal padi.......aaj uske jism par ek bhi kapda maujood nahin tha.......wo fir bed par rakha kale rang ka bra aur usi rang ki matching panty lekar pehananey lagi.....fir usney skirt aur shirt pehna........aur last mein usney tie bhi laga li........skirt kafi choti thi jo aab uske ghutnon ke 4 inch upar tak aa rahi thi......nidhi ki mansal aur gori jangh usmein qayamat barpaa rahi thi.......in kapdon mein wo kisi 10 standard mein padhney wali college girl ki tarah lag rahi thi .........<br />
 <br />
 shirt jo ki half baju ki thi jissey nidhi ki gori bahein kisi sangmarmar ki tarah chamak rahi thi.......us dress mein uska poora youwan kisi phool ki tarah khil raha tha......aaj bhi usney apne bal khule rakhey they........nidhi ki bechaini aur betabi pal pal badhti jaa rahi thi......pata nahin aslam usey is dress mein dekhkar kya reaction karega.......kya wo college mein padhney wali un ladkiyon jaisi dikh rahi thi jaisa aslam usey us roop mein dekhna chahta tha..........wo kabhi kalpana ki duniya mein chali jati to kabhi vastavik duniya mein khud ko jodti.........to kabhi apne aapko aaiyney ke samney niharti.....aur idher waqt tha ki katney ka naam hi nahin le raha tha......baar baar nidhi ki nigaah ghadi ke sui par jaakar tik jati thi......aab 9 bajne ko aaye they aur aslam aabhi tak nahin aaya tha.......ye sochkar uska dil aur bhi ghabraa raha tha.....<br />
@@ -346,6 +354,7 @@ nidhi- aslam .....please......chodho mujhe........ye sab galat hain.......<br />
 <br />
 aslam- aapko aisa kyon lagta hain memsaheb ki ye sab galat hain.......agar pyaasa kuyein ke paas nahin jaiyega to wo apni pyaas kaise mitayega......kuch galat nahin hain memsaheb........maine aapki aankhon mein wo pyaas dekhi hain.......wo tadap dekhi hain......sach to ye hain ki is waqt aap bahut pyasi hain........is waqt aapko ek mard ki zaroorat hain jo aapke tan mein uth rahein us pyaas ko shant kar sake......agar main jhoot bol raha hoon to aap beshak jaa sakti hain......main aapko aab rokunga nahin........<br />
 <br />
+<img src="https://i.pinimg.com/564x/a8/d5/36/a8d536b744b0d4be9851012f2390e074.jpg" alt="">
 nidhi sharam se apni nazrein neechay jhukye rehti hain......uske honth excitement ki wajah se fadfada rahein they........aab aslam ki pakad mein wo sakhti nahin thi jo pehle thi.......wo aachey se janta tha ki nidhi aab ussey door nahin jaa sakti.......aur jaisa usney socha tha bilkul waisa hi hua........nidhi kisi pathar ke murat ke saman chup chaap wahin khadi thi ........aslam se satkar uske bahut paas.......<br />
 <br />
 aslam apne jeet par aaj bahut khus tha.......aab nidhi uske pure control mein aa chuki thi.........aab wo apni sari fantasies ek ek kar puri kar sakta tha......<br />
@@ -378,6 +387,7 @@ aslam fir apna honth dheere se nidhi ki garden par rakh deta hain aur bade pyaar
 <br />
 aslam fir apna haath fauran uske skirt ke ander dal deta hain aur usey sarkatey hue uski black color ki panty par le jane lagta hain........aab uska ek haath uski choot par tha.......jaise hi wo apna haath uske choot par le jata hain idher nidhi ek baar fir se bechain ho uthathi hain........wo fauran apni garden peechay ki ore le jati hain aur aslam ke honton ko fir se choosney lagti hain.......aaj wo khud hosh mein nahin thi........<br />
 <br />
+<img src="https://i.pinimg.com/564x/c8/0f/2a/c80f2a9a3394b3646fa8612c676fc289.jpg" alt="">
 aslam apni mutthi se nidhi ki choot ko pakadta hain aur kaskar masal deta hain.......nidhi apne honton ki sakhti aur bhi badhatey jaa rahi thi.......wo kabhi aslam ke honton ko katati to kabhi usey apne mooh mein lekar choosati..........aslam kuch deer tak nidhi ki choot ko aise hi apne mutthi mein pakdey rehta hain fir wo apna dusara haath bhi uske skirt ke ander le jata hain........ek haath uska gand par tha aur dusara uske choot par.......fir wo apne dono haathon ko nidhi ke panty par le jata hain aur usey dheere dheere neechay ki taraf sarkaney lagta hain........<br />
 <br />
 nidhi koi virodh nahin karti aur usi tarah aslam ke honton ka rus peeti rehti hain........aslam fir turant thoda sa jhuk kar ussey door hota hain fir wo wahin ghutnon ke bal farsh par baith jata hain aur apne dono haathon se nidhi ki panty skirt ke ander dale dheere dheere neechay ki taraf khichney lagta hain........nidhi chup chaap khadi hokar apni panty aslam se utarwa rahi thi.........thodi deer baad jab aslam uski panty ko uske ghutnon tak lata hain to nidhi fauran usey apne pawn sata leti hain jissey uski panty saraktey hue uske kadmom tak aa jati hain......<br />
@@ -409,6 +419,7 @@ aslam- kaho saheb kya kaam tha.....<br />
 <br />
 thekedaar- pehle batawo kya kar rahein ho....tumhein aabhi isi waqt aana hain......<br />
 <br />
+<img src="https://i.pinimg.com/564x/24/d3/3b/24d33b5959392ed45fe5228cb5d4524c.jpg" alt="">
 aslam nidhi ki ore bade gaur se dekhney lagta hain...fir wo apna haath apne mobile par speaker par rakh deta hain- bata doon memsaheb saheb ko ki is waqt main kya kar raha hoon.....nidhi ka chehra sharam se bilkul laal padhta jaa raha tha......wo chaah kar bhi kuch nahin bol pati aur apni nazrein neechay ki taraf jhuka leti hain......<br />
 <br />
 aslam- to suno ......main is waqt apni memsaheb ki choot mein ungli kar raha hoon......unke choot se pani nikal raha hoon........aab kaho kya kaam tha.......<br />
@@ -474,6 +485,7 @@ kuldeep- lo kar lo baat......tum to meri baateion ka bura hi maan gaye........ag
 <br />
 aslam- haan to aab aap mujhse saude baazi kar rahein hain......fir to sochna padega kuch......aur agar aap meri memsaheb ko ek baar dekh lengey to film ki heroine ko bhi bhool jayengey......ek dum pataka hain pataka.......umar bhi uski koi 20 ,22 saal ki hain.......kasa hua badan hain.....ek dum tight maal hain sali.......aur sabse badi baat ki wo zyada chudi bhi nahin hain apne pati se........<br />
 <br />
+<img src="https://i.pinimg.com/564x/8b/10/93/8b10937cd598e3a3d59ae1821c97a1d3.jpg" alt="">
 kuldeep ke lund mein fir se dheere dheere harkat hone lagi thi.........wo aab aslam ki baateion se pura bekabu hota jaa raha tha........usey kaise bhi nidhi chahiye thi......iske badley wo aab koi bhi keemat dene ko taiyaar tha.......<br />
 <br />
 kuldeep- to tum mere liye ek baar baat to karo......mera mamla bhi ussey ek baar set karwa do......aur kuch tumhein chahiye to main wo bhi tumhein dene ko taiyaar hoon.....<br />
@@ -555,6 +567,7 @@ aslam- main kal aawunga to aapko unmein se ek kele apne choot ke ander rakhney h
 <br />
 nidhi- magar......main.....wo.....mujhe........nahin......<br />
 <br />
+<img src="https://i.pinimg.com/564x/cc/5e/ae/cc5eae436e107e5121d8bb24fc2df5ba.jpg" alt="">
 aslam- kya hua memshaeb.......aap to meri baateion se aise ghabraa rahi hain jaise main aapki jaan mang raha hoon......main to aapka chahney wala hoon.......aap agar mujhse hi sharmayengi to kaise kaam chalega........aur haan jab aap subeh nahayengi tabhi us waqt wo kele apne choot ke ander dal lijiyega.......taki aapke choot ka rus aur kele ka swaad dono ka maza mujhe ek saath mil sake........<br />
 <br />
 nidhi ki halat aab dheere dheere kharab hone lagi thi.....usey maloom tha ki agar aise hi kuch deer tak ye silsila chalta raha to uski choot se pani nikal jayega......aur aab sagar ke aane ka waqt ho raha tha........wo aisi waisi koi bhi harkat nahin karna chahti thi........ye sochkar wo apna haath fauran apne choot par se hata leti hain........<br />
