--- a/stories.html
+++ b/stories.html
@@ -352,6 +352,13 @@
             </div>
         </a>
 
+        <a href="story/collection/hadsa.html">
+            <div class="stories-item">
+                <img src="" alt="Adventure Stories">
+                <div class="stories-title">Hadsa</div>
+            </div>
+        </a>
+
         <a href="story/collection/">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
