--- a/stories.html
+++ b/stories.html
@@ -354,8 +354,15 @@
 
         <a href="story/collection/hadsa.html">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title">Hadsa</div>
+                <img src="https://i.pinimg.com/736x/71/39/d3/7139d3f0e8919fc65101be1ca604a0e7.jpg" alt="Adventure Stories">
+                <div class="stories-title">हादसा</div>
+            </div>
+        </a>
+
+        <a href="story/collection/gangbang.html">
+            <div class="stories-item">
+                <img src="https://cdni.pornpics.com/1280/7/259/50606113/50606113_077_d6f9.jpg" alt="Adventure Stories">
+                <div class="stories-title">मेरे बर्थडे पर 5 लंड से मम्मी का गैंगबैंग</div>
             </div>
         </a>
 
