--- a/photos.html
+++ b/photos.html
@@ -184,6 +184,7 @@
         <a href="photo/categories.html"><i class="fas fa-th-list"></i> Categories</a>
         <a href="photo/Channels.html"><i class="fas fa-tv"></i> Channels</a>
         <a href="photo/Actors.html"><i class="fas fa-user"></i> Actors</a>
+        <a href="https://3sex.com/?ref=MF-DK&utm_medium=top_menu&utm_source=MF-DK"><i class="fa-regular fa-circle-play"></i></a>
     </div>
 
     <script>
