--- a/stories.html
+++ b/stories.html
@@ -381,6 +381,7 @@
         <a href="story/catagories.html"><i class="fas fa-th-list"></i></a>
         <a href="story/Language.html"><i class="fas fa-language"></i></a>
         <a href="story/genre.html"><i class="fas fa-book"></i></a>
+        <a href="https://3sex.com/?ref=MF-DK&utm_medium=top_menu&utm_source=MF-DK"><i class="fa-regular fa-circle-play"></i></a>
     </div>
 
     <!-- Font Awesome for icons -->
