--- a/videos.html
+++ b/videos.html
@@ -306,7 +306,7 @@
         <a href="videos/catagories.html"><i class="fas fa-th-list"></i></a>
         <a href="videos/channels.html"><i class="fas fa-tv"></i></a>
         <a href="videos/actors.html"><i class="fas fa-user"></i></a>
-        <a href="shorts.html"><i class="fa-regular fa-circle-play"></i></a>
+        <a href="https://3sex.com/?ref=MF-DK&utm_medium=top_menu&utm_source=MF-DK"><i class="fa-regular fa-circle-play"></i></a>
     </div>
 
     <!-- JavaScript for pausing other videos -->
