--- a/stories.html
+++ b/stories.html
@@ -366,6 +366,27 @@
             </div>
         </a>
 
+        <a href="story/collection/anjaliarora.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/ed/ae/60/edae60333a0a2ce78c093ae3e8be35f8.jpg" alt="Adventure Stories">
+                <div class="stories-title">ANJALI ARORA</div>
+            </div>
+        </a>
+
+        <a href="story/collection/ritika.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/8c/bc/f5/8cbcf57329b0d1add855d399ae1711ef.jpg" alt="Adventure Stories">
+                <div class="stories-title"></div>
+            </div>
+        </a>
+
+        <a href="story/collection/">
+            <div class="stories-item">
+                <img src="" alt="Adventure Stories">
+                <div class="stories-title"></div>
+            </div>
+        </a>
+
         <a href="story/collection/">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
