--- a/story/collection/anjaliarora.html
+++ b/story/collection/anjaliarora.html
@@ -41,7 +41,7 @@
         <br>
         inspector: Ufff meri Anjali, aaja tujhe main apne lund ki ghulam banata hu.
         <br>
-        Itna bool ke inspector apne lund ko Anjali ke face ke saamne laga dete hai, aur Anjali inspector ke lund se khelne lagti hai. Fir khelte-khelte lund muh mein le leti hai, aur dheere-dheere chooste hue jeebh se lund ko chaatne lagti hai.
+        Itna bol ke inspector apne lund ko Anjali ke face ke saamne laga dete hai, aur Anjali inspector ke lund se khelne lagti hai. Fir khelte-khelte lund muh mein le leti hai, aur dheere-dheere chooste hue jeebh se lund ko chaatne lagti hai.
         <br>
         inspector ko dekh ke hi lag raha tha, ki unko bahut maza aa raha tha. Ab Anjali ne bhi choosne ki speed badha di. Anjali chooste hue choup-choup ki awaaz kar rahi thi. inspector bhi Anjali ke sar ko lund pe daba rahe the.
         <br>
