--- a/stories.html
+++ b/stories.html
@@ -361,9 +361,8 @@
 
         <a href="story/collection/gangbang.html">
             <div class="stories-item">
-                <img src="https://cdni.pornpics.com/1280/7/259/50606113/50606113_077_d6f9.jpg" alt="Adventure Stories">
+                <img src="https://i.pinimg.com/564x/d2/33/af/d233af93af31465ad27097317f582678.jpg" alt="Adventure Stories">
                 <div class="stories-title">मेरे बर्थडे पर 5 लंड से मम्मी का गैंगबैंग</div>
-            </div>
         </a>
 
         <a href="story/collection/anjaliarora.html">
@@ -376,7 +375,7 @@
         <a href="story/collection/ritika.html">
             <div class="stories-item">
                 <img src="https://i.pinimg.com/564x/8c/bc/f5/8cbcf57329b0d1add855d399ae1711ef.jpg" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <div class="stories-title">Naukaro-ki-randy</div>
             </div>
         </a>
 
