--- a/stories.html
+++ b/stories.html
@@ -291,7 +291,7 @@
 
         <a href="story/collection/erosapartment.html">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
+                <img src="https://i.pinimg.com/736x/8b/54/95/8b54951e669ea09e377a403473950d83.jpg" alt="Adventure Stories">
                 <div class="stories-title">Eros Apartment ke Kisse Kahaniya</div>
             </div>
         </a>
@@ -363,6 +363,7 @@
             <div class="stories-item">
                 <img src="https://i.pinimg.com/564x/d2/33/af/d233af93af31465ad27097317f582678.jpg" alt="Adventure Stories">
                 <div class="stories-title">मेरे बर्थडे पर 5 लंड से मम्मी का गैंगबैंग</div>
+            </div>
         </a>
 
         <a href="story/collection/anjaliarora.html">
@@ -379,10 +380,26 @@
             </div>
         </a>
 
-        <a href="story/collection/">
+        <a href="story/collection/gangster.html">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <img src="https://i.pinimg.com/564x/1f/f0/92/1ff092bfa144257b43fa6a1127ac33f6.jpg" alt="Adventure Stories">
+                <div class="stories-title">Sarita Aur Gangster</div>
+            </div>
+        </a>
+
+        
+
+        <a href="story/collection/sunday.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/4a/2d/32/4a2d32710ce905187c18fe43844ae2eb.jpg" alt="Adventure Stories">
+                <div class="stories-title">Sunday bna Gum Day</div>
+            </div>
+        </a>
+
+        <a href="story/collection/worker.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/2d/d2/fc/2dd2fc213fc38f33305669064ff3c4e4.jpg" alt="Adventure Stories">
+                <div class="stories-title">construction worker aur sunita</div>
             </div>
         </a>
 
