--- a/stories.html
+++ b/stories.html
@@ -403,6 +403,13 @@
             </div>
         </a>
 
+        <a href="story/collection/villain.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/564x/05/3e/a2/053ea2a5167cd7f2743ca29a53bb71c0.jpg" alt="Adventure Stories">
+                <div class="stories-title">mom trapped by villain</div>
+            </div>
+        </a>
+
         <a href="story/collection/">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
