--- a/story/catagories.html
+++ b/story/catagories.html
@@ -211,7 +211,7 @@
                 </div>
             </a>
 
-            <a href="">
+            <a href="comic/main.html">
                 <div class="category-item">
                     <img src="https://8muses.io/img/data/full_000000334287.jpg" alt="Historical Stories">
                     <div class="category-title">comic</div>
