--- a/stories.html
+++ b/stories.html
@@ -410,6 +410,13 @@
             </div>
         </a>
 
+        <a href="story/collection/hucow.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/736x/41/94/c9/4194c990ae7cb226db29c681ea8a0b86.jpg" alt="Adventure Stories">
+                <div class="stories-title">Hucow</div>
+            </div>
+        </a>
+
         <a href="story/collection/">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
