--- a/story/collection/villain2.html
+++ b/story/collection/villain2.html
@@ -31,6 +31,7 @@
             width: 100%;
         }
         a{
+            text-decoration: none;
             color: red;
         }
     </style>
@@ -825,7 +826,7 @@
     </p>
 
     <div class="page" style="font-size: 25px; text-align: center; ">
-        <a href="villaiin3.html">page-3</a>
+        <a href="villaiin3.html">PAGE-3</a>
     </div>
 </body>
 </html>
