--- a/stories.html
+++ b/stories.html
@@ -445,10 +445,10 @@
             </div>
         </a>
 
-        <a href="story/collection/">
+        <a href="story/collection/jyoti.html">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <img src="https://i.pinimg.com/564x/ab/d7/45/abd7451c48c585832dd40a502e3f6dd4.jpg" alt="Adventure Stories">
+                <div class="stories-title">Rich girl Jyoti Ruined& Reduced to a Low Class Common Whore</div>
             </div>
         </a>
 
