--- a/story/collection/villain4.html
+++ b/story/collection/villain4.html
@@ -27,6 +27,6 @@
     </style>
 </head>
 <body>
-    <p>to be comming</p>
+    <p>maine bhut koshsih karke use marne gya socha syringe laga dunga jisase wo behosh ho jayega par wo behosh nhi hua saara mamala ulta pad gya aur wo jaag gya au usne mujhe dhakka de diya aur phir bistar se niche utar kar mujhe marne lga mummy use rokne ki koshish karne lagi par wo muje maare ja arha tha</p>
 </body>
 </html>
